Revision history for Socialtext-Utils

0.13 - not yet released
  - Socialtext::Resting::Getopt doesn't set pass_through globally
  - Socialtext::EditPage names the tempfiles more meaningfully
  - Added a .wiki extension to the tempfiles.

0.12 - Wed Mar 21 21:40:29 PDT 2007
  - Refactor Socialtext::Resting::Mock's tag and page handling
    - It's now more like an in-memory Socialtext::Rester
  - Added a primative Socialtext::EditBlog
  - Add stu-save-pages
  - Use /usr/bin/vim if no $EDITOR

0.11 - Sun Feb 25 10:54:55 PST 2007
  - YAML wiki object only looks for yaml in the first .pre block
  - Use Test::Mock::HTTP::Response in Socialtext::Rester::Mock

0.10 - Tue Feb 20 10:46:05 PST 2007
  - Copy tags from template pages when they're used
  - Add Socialtext::Resting::Getopt to handle command line args
  - Fix Mock Rester to match real library's get_pagetags()
  - Added Socialtext::WikiObject::YAML class
  - Added Socialtext::WikiObject::Factory which reads magic tags
    to find the class to create the WikiObject as.

0.09 - Wed Feb 14 17:03:59 PST 2007
  - Fixed t/wikedit.t when a ~/.wikeditrc isn't there

0.08 - Sun Feb 11 11:18:28 PST 2007
  - Add edit_last_page(), which opens the most recently
    edited page tagged with the given tag.
  - Add --template switch to edit new pages from a template
  - Add response() method to mock rester

0.07 - Thu Jan 25 11:20:12 PST 2007
  - Include DefaultRester.pm in the MANIFEST and a unit test
  - bump version dependencies

0.06 - Tue Jan 23 21:05:35 PST 2007
  - Added --pull-includes feature
  - Added extraclude support
  - Added collision detection when PUTting edits
  - all unit tests now use Socialtext::Resting::Mock
  - Added --output option to wikedit
  - Introduced Socialtext::Resting::DefaultRester class
    to handle storing user/pass/server/workspace info in one place

0.05 - Tue Jan  9 17:31:52 PST 2007
  - fixed typo in usage

0.04 - Tue Jan  9 15:58:50 PST 2007