@@ -4,6 +4,7 @@ Revision history for Socialtext-Utils
   - Socialtext::Resting::Getopt doesn't set pass_through globally
   - Socialtext::EditPage names the tempfiles more meaningfully
   - Added a .wiki extension to the tempfiles.
+  - Made system() calls in EditPage take LIST form, rather than STRING.
 
 0.12 - Wed Mar 21 21:40:29 PDT 2007
   - Refactor Socialtext::Resting::Mock's tag and page handling
